# swagger.json
@@ -6,7 +6,7 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"League": {
+			"Owner": {
 				"properties": {
 					"id": {
 						"type": "number",
@@ -23,10 +23,10 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"SingleLeagueResponse": {
+			"SingleOwnerResponse": {
 				"properties": {
-					"league": {
-						"$ref": "#/components/schemas/League"
+					"owner": {
+						"$ref": "#/components/schemas/Owner"
 					}
 				},
 				"type": "object",
@@ -97,16 +97,16 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/leagues/{id}": {
+		"/owners/{id}": {
 			"get": {
-				"operationId": "FindLeagueById",
+				"operationId": "FindOwnerById",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SingleLeagueResponse"
+									"$ref": "#/components/schemas/SingleOwnerResponse"
 								}
 							}
 						}
@@ -136,9 +136,9 @@
 				]
 			}
 		},
-		"/leagues": {
+		"/owners": {
 			"post": {
-				"operationId": "CreateLeague",
+				"operationId": "CreateOwner",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -160,12 +160,12 @@
 						"application/json": {
 							"schema": {
 								"properties": {
-									"leagueName": {
+									"displayName": {
 										"type": "string"
 									}
 								},
 								"required": [
-									"leagueName"
+									"displayName"
 								],
 								"type": "object"
 							}
